--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -3,12 +3,29 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Social</title>
+		<title>Hot Dog</title>
+		<link rel="stylesheet" href="../CSS/style.css" />
 	</head>
 	<body>
-		<i class="fa-solid fa-trash"></i>
+		<header>
+			<h2>Hot Dog</h2>
+			<ul>
+				<li>Accueil</li>
+				<li>Mes posts</li>
+				<li>Mes commentaires</li>
+				<li>Mes abonnements</li>
+			</ul>
+			<nav>
+				<a href="../AUTH/login.html"><button>Se connecter</button></a>
+				<a href="../AUTH/register.html"><button>S'inscrire</button></a>
+			</nav>
+		</header>
+		<main></main>
+		<footer>
+			<h2>Copyright - Simplon 2024</h2>
+		</footer>
 	</body>
-	<script src="https://cdn.tailwindcss.com"></script>
+	<!-- <script src="https://cdn.tailwindcss.com"></script> -->
 	<script
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
