--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -20,7 +20,9 @@
 				<a href="../AUTH/register.html"><button>S'inscrire</button></a>
 			</nav>
 		</header>
-		<main></main>
+		<section>
+			
+		</section>
 		<footer>
 			<h2>Copyright - Simplon 2024</h2>
 		</footer>
