--- a/FRONT/AUTH/login.html
+++ b/FRONT/AUTH/login.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-				<form class="space-y-6" action="#" method="POST">
+				<div class="space-y-6">
 					<div>
 						<label
 							for="email"
@@ -30,7 +30,7 @@
 						>
 						<div class="mt-2">
 							<input
-								id="email"
+								id="login-email"
 								name="email"
 								type="email"
 								autocomplete="email"
@@ -57,7 +57,7 @@
 						</div>
 						<div class="mt-2">
 							<input
-								id="password"
+								id="login-password"
 								name="password"
 								type="password"
 								autocomplete="current-password"
@@ -71,11 +71,12 @@
 						<button
 							type="submit"
 							class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+							onclick="handleLogin()"
 						>
-							Sign in
+							Log in
 						</button>
 					</div>
-				</form>
+				</div>
 
 				<p class="mt-10 text-center text-sm text-gray-500">
 					Not a member ?
@@ -93,4 +94,5 @@
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
 	></script>
+	<script src="auth.js"></script>
 </html>
