--- a/FRONT/AUTH/register.html
+++ b/FRONT/AUTH/register.html
@@ -10,18 +10,52 @@
 			<div class="sm:mx-auto sm:w-full sm:max-w-sm">
 				<img
 					class="mx-auto h-24 w-24 rounded-full"
-					src="https://content.imageresizer.com/images/memes/Suspicious-Dog-meme-1.jpg"
+					src="https://i.imgflip.com/3y2sn2.jpg?a476568"
 					alt="Your Company"
 				/>
 				<h2
 					class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
 				>
-					Log in to your account
+					Register
 				</h2>
 			</div>
 
 			<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-				<form class="space-y-6" action="#" method="POST">
+				<div class="space-y-6">
+					<div>
+						<label
+							for="name"
+							class="block text-sm font-medium leading-6 text-gray-900"
+							>Name</label
+						>
+						<div class="mt-2">
+							<input
+								id="name"
+								name="name"
+								type="text"
+								autocomplete="name"
+								required
+								class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+							/>
+						</div>
+					</div>
+					<div>
+						<label
+							for="photo"
+							class="block text-sm font-medium leading-6 text-gray-900"
+							>Avatar</label
+						>
+						<div class="mt-2">
+							<input
+								id="photo"
+								name="photo"
+								type="file"
+								autocomplete="photo"
+								required
+								class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+							/>
+						</div>
+					</div>
 					<div>
 						<label
 							for="email"
@@ -47,13 +81,6 @@
 								class="block text-sm font-medium leading-6 text-gray-900"
 								>Password</label
 							>
-							<div class="text-sm">
-								<a
-									href="#"
-									class="font-semibold text-indigo-600 hover:text-indigo-500"
-									>Forgot password?</a
-								>
-							</div>
 						</div>
 						<div class="mt-2">
 							<input
@@ -71,18 +98,19 @@
 						<button
 							type="submit"
 							class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+							onclick="handleRegister()"
 						>
 							Sign in
 						</button>
 					</div>
-				</form>
+				</div>
 
 				<p class="mt-10 text-center text-sm text-gray-500">
-					Not a member ?
+					Already have an account ?
 					<a
-						href="./register.html"
+						href="./login.html"
 						class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
-						>Register now !</a
+						>Log in</a
 					>
 				</p>
 			</div>
@@ -93,4 +121,5 @@
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
 	></script>
+	<script src="auth.js"></script>
 </html>
