did front register, login, index

--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -3,31 +3,37 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hot Dog</title>
+		<title>Social</title>
 		<link rel="stylesheet" href="../CSS/style.css" />
 	</head>
 	<body>
 		<header>
-			<h2>Hot Dog</h2>
-			<ul>
-				<li>Accueil</li>
-				<li>Mes posts</li>
-				<li>Mes commentaires</li>
-				<li>Mes abonnements</li>
-			</ul>
+			<a href="../INDEX/index.html"><h2>Social</h2></a>
+
 			<nav>
-				<a href="../AUTH/login.html"><button>Se connecter</button></a>
-				<a href="../AUTH/register.html"><button>S'inscrire</button></a>
+				<a href="../AUTH/login.html"
+					><button>
+						Login
+						<i class="fa-solid fa-right-to-bracket"></i></button
+				></a>
+				<a href="../AUTH/register.html"
+					><button>Register <i class="fa-solid fa-user"></i></button
+				></a>
 			</nav>
 		</header>
 		<section>
-			
+			<div class="hero-section">
+				<h1>Welcome to (name)</h1>
+				<p>(name) is a social networking platform</p>
+				<a href="../AUTH/register.html"
+					><button>Register <i class="fa-solid fa-user"></i></button
+				></a>
+			</div>
 		</section>
 		<footer>
 			<h2>Copyright - Simplon 2024</h2>
 		</footer>
 	</body>
-	<!-- <script src="https://cdn.tailwindcss.com"></script> -->
 	<script
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
