--- a/FRONT/AUTH/register.html
+++ b/FRONT/AUTH/register.html
@@ -4,119 +4,41 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Social</title>
+		<link rel="stylesheet" href="../CSS/style.css" />
+		<link rel="stylesheet" href="../CSS/form.css" />
 	</head>
 	<body>
-		<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-			<div class="sm:mx-auto sm:w-full sm:max-w-sm">
-				<img
-					class="mx-auto h-24 w-24 rounded-full"
-					src="https://i.imgflip.com/3y2sn2.jpg?a476568"
-					alt="Your Company"
-				/>
-				<h2
-					class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
-				>
-					Register
-				</h2>
+		<header>
+			<a href="../INDEX/index.html"><h2>Social</h2></a>
+
+			<nav>
+				<a href="../INDEX/index.html"
+					><button>
+						Main menu
+						<i class="fa-solid fa-right-to-bracket"></i></button
+				></a>
+			</nav>
+		</header>
+		<main>
+			<div class="form">
+				<h1>Register</h1>
+				<label for="name">Name</label>
+				<input type="text" name="name" id="name" />
+
+				<label for="photo">Avatar</label>
+				<input type="file" name="photo" id="photo" />
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email" />
+				<label for="password">Password</label>
+				<input type="text" name="password" id="password" />
+				<button type="submit" onclick="handleRegister()">Submit</button>
+				<p>Already have an account ? <a href="login.html">Login</a></p>
 			</div>
-
-			<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-				<div class="space-y-6">
-					<div>
-						<label
-							for="name"
-							class="block text-sm font-medium leading-6 text-gray-900"
-							>Name</label
-						>
-						<div class="mt-2">
-							<input
-								id="name"
-								name="name"
-								type="text"
-								autocomplete="name"
-								required
-								class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-							/>
-						</div>
-					</div>
-					<div>
-						<label
-							for="photo"
-							class="block text-sm font-medium leading-6 text-gray-900"
-							>Avatar</label
-						>
-						<div class="mt-2">
-							<input
-								id="photo"
-								name="photo"
-								type="file"
-								autocomplete="photo"
-								required
-								class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-							/>
-						</div>
-					</div>
-					<div>
-						<label
-							for="email"
-							class="block text-sm font-medium leading-6 text-gray-900"
-							>Email</label
-						>
-						<div class="mt-2">
-							<input
-								id="email"
-								name="email"
-								type="email"
-								autocomplete="email"
-								required
-								class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-							/>
-						</div>
-					</div>
-
-					<div>
-						<div class="flex items-center justify-between">
-							<label
-								for="password"
-								class="block text-sm font-medium leading-6 text-gray-900"
-								>Password</label
-							>
-						</div>
-						<div class="mt-2">
-							<input
-								id="password"
-								name="password"
-								type="password"
-								autocomplete="current-password"
-								required
-								class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-							/>
-						</div>
-					</div>
-
-					<div>
-						<button
-							type="submit"
-							class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-							onclick="handleRegister()"
-						>
-							Sign in
-						</button>
-					</div>
-				</div>
-
-				<p class="mt-10 text-center text-sm text-gray-500">
-					Already have an account ?
-					<a
-						href="./login.html"
-						class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
-						>Log in</a
-					>
-				</p>
-			</div>
-		</div>
+		</main>
+		<footer>
+			<h2>Copyright - Simplon 2024</h2>
+		</footer>
 	</body>
-	<script src="https://cdn.tailwindcss.com"></script>
 	<script
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
