front js all listings done

--- a/FRONT/AUTH/login.html
+++ b/FRONT/AUTH/login.html
@@ -23,9 +23,9 @@
 			<div class="form">
 				<h1>Login</h1>
 				<label for="email">Email</label>
-				<input type="email" name="email" id="email" />
+				<input type="email" name="email" id="login-email" />
 				<label for="password">Password</label>
-				<input type="text" name="password" id="password" />
+				<input type="text" name="password" id="login-password" />
 				<button type="submit" onclick="handleLogin()">Submit</button>
 				<p>
 					Don't have an account ? <a href="register.html">Register</a>
