--- a/FRONT/USER/user.html
+++ b/FRONT/USER/user.html
@@ -17,11 +17,10 @@
 				<li>My followers</li>
 			</ul>
 			<nav>
-				<a href="../AUTH/login.html"
-					><button>
-						Disconnect
-						<i class="fa-solid fa-right-to-bracket"></i></button
-				></a>
+				<button onclick="disconnectButton()">
+					Disconnect
+					<i class="fa-solid fa-right-to-bracket"></i>
+				</button>
 			</nav>
 		</header>
 		<main>
@@ -52,4 +51,5 @@
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
 	></script>
+	<script src="user.js"></script>
 </html>
