--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -3,37 +3,131 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Social</title>
+		<title>Social Network</title>
 		<link rel="stylesheet" href="../CSS/style.css" />
 	</head>
 	<body>
-		<header>
-			<a href="../INDEX/index.html"><h2>Social</h2></a>
-
-			<nav>
+		<header
+			class="flex flex-row justify-between items-center h-16 bg-slate-950 text-white px-8"
+		>
+			<h2>Social Network</h2>
+			<div class="w-fit gap-8 flex flex-row justify-between">
 				<a href="../AUTH/login.html"
-					><button>
-						Login
-						<i class="fa-solid fa-right-to-bracket"></i></button
-				></a>
+					><button
+						class="py-1.5 border-2 border-solid border-sky-700 rounded-lg px-3.5 hover:border-slate-50"
+					>
+						Log in
+					</button></a
+				>
 				<a href="../AUTH/register.html"
-					><button>Register <i class="fa-solid fa-user"></i></button
-				></a>
-			</nav>
-		</header>
-		<section>
-			<div class="hero-section">
-				<h1>Welcome to (name)</h1>
-				<p>(name) is a social networking platform</p>
-				<a href="../AUTH/register.html"
-					><button>Register <i class="fa-solid fa-user"></i></button
-				></a>
+					><button
+						class="py-1.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
+					>
+						Register
+					</button></a
+				>
 			</div>
-		</section>
-		<footer>
-			<h2>Copyright - Simplon 2024</h2>
+		</header>
+		<div
+			class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32 h-dvh"
+		>
+			<img
+				src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&crop=focalpoint&fp-y=.8&w=2830&h=1500&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply"
+				alt=""
+				class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center"
+			/>
+			<div
+				class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl"
+				aria-hidden="true"
+			>
+				<div
+					class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20"
+					style="
+						clip-path: polygon(
+							74.1% 44.1%,
+							100% 61.6%,
+							97.5% 26.9%,
+							85.5% 0.1%,
+							80.7% 2%,
+							72.5% 32.5%,
+							60.2% 62.4%,
+							52.4% 68.1%,
+							47.5% 58.3%,
+							45.2% 34.5%,
+							27.5% 76.7%,
+							0.1% 64.9%,
+							17.9% 100%,
+							27.6% 76.8%,
+							76.1% 97.7%,
+							74.1% 44.1%
+						);
+					"
+				></div>
+			</div>
+			<div
+				class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu"
+				aria-hidden="true"
+			>
+				<div
+					class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20"
+					style="
+						clip-path: polygon(
+							74.1% 44.1%,
+							100% 61.6%,
+							97.5% 26.9%,
+							85.5% 0.1%,
+							80.7% 2%,
+							72.5% 32.5%,
+							60.2% 62.4%,
+							52.4% 68.1%,
+							47.5% 58.3%,
+							45.2% 34.5%,
+							27.5% 76.7%,
+							0.1% 64.9%,
+							17.9% 100%,
+							27.6% 76.8%,
+							76.1% 97.7%,
+							74.1% 44.1%
+						);
+					"
+				></div>
+			</div>
+			<div class="mx-auto max-w-7xl px-6 lg:px-8">
+				<div
+					class="mx-auto w-1/2 lg:mx-0 h-80 flex flex-col justify-between p-3.5"
+				>
+					<h2
+						class="text-4xl font-bold tracking-tight text-white sm:text-6xl"
+					>
+						Welcome to Social Network
+					</h2>
+					<p class="text-lg leading-8 text-gray-300">
+						Here you can post, comment, like and dislike, follow
+						others or be followed !
+					</p>
+
+					<a href="../AUTH/register.html"
+						><button
+							class="text-slate-50 w-fit px-2.5 py-1.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
+						>
+							Register
+						</button></a
+					>
+				</div>
+			</div>
+		</div>
+		<footer
+			class="flex flex-row justify-evenly px-3.5 items-center h-32 bg-slate-950 text-white"
+		>
+			<h2 class="text-lg leading-8 text-gray-300">
+				Copyright - Simplon 2024
+			</h2>
+			<h2 class="text-lg leading-8 text-gray-300">About</h2>
+			<h2 class="text-lg leading-8 text-gray-300">Contact</h2>
+			<h2 class="text-lg leading-8 text-gray-300">GDPR</h2>
 		</footer>
 	</body>
+	<script src="https://cdn.tailwindcss.com"></script>
 	<script
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
