--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -10,7 +10,11 @@
 		<header
 			class="flex flex-row justify-between items-center h-16 bg-slate-950 text-white px-8"
 		>
-			<h2>Social Network</h2>
+			<a href="./index.html"><img
+				class="h-16"
+				src="../MEDIA/LOGO3.png"
+				alt="Social Network logo"
+			/></a>
 			<div class="w-fit gap-8 flex flex-row justify-between">
 				<a href="../AUTH/login.html"
 					><button
