--- a/FRONT/AUTH/register.html
+++ b/FRONT/AUTH/register.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Social Network</title>
-		<link rel="stylesheet" href="../CSS/style.css" />
+		<link rel="stylesheet" href="../CSS/main.css" />
 	</head>
 	<body>
 		<header
-			class="flex flex-row justify-between items-center h-16 bg-slate-950 text-white px-8"
+			class="flex flex-row justify-between items-center h-24 bg-slate-950 text-white px-8"
 		>
 			<a href="../INDEX/index.html">
 				<img
@@ -19,15 +19,15 @@
 			<div class="w-fit gap-8 flex flex-row justify-between">
 				<a href="../INDEX/index.html"
 					><button
-						class="py-1.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
+						class="flex gap-2.5 items-center py-1.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
 					>
-						Main menu
+						<i class="fa-solid fa-house"></i>Home
 					</button></a
 				>
 			</div>
 		</header>
 
-		<div
+		<main
 			class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 min-h-dvh max-h-fit bg-slate-800"
 		>
 			<div
@@ -137,13 +137,13 @@
 					>
 				</p>
 			</div>
-		</div>
+		</main>
 
 		<footer
 			class="w-full flex flex-row justify-evenly px-3.5 items-center h-32 bg-slate-950 text-white"
 		>
 			<h2 class="text-lg leading-8 text-gray-300">
-				Copyright - Simplon 2024
+				Copyright - Simplon® 2024
 			</h2>
 			<h2 class="text-lg leading-8 text-gray-300">About</h2>
 			<h2 class="text-lg leading-8 text-gray-300">Contact</h2>
