--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -4,36 +4,38 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Social Network</title>
-		<link rel="stylesheet" href="../CSS/style.css" />
+		<link rel="stylesheet" href="../CSS/main.css" />
 	</head>
 	<body>
 		<header
-			class="flex flex-row justify-between items-center h-16 bg-slate-950 text-white px-8"
+			class="flex flex-row justify-between items-center h-24 bg-slate-950 text-white px-8"
 		>
-			<a href="./index.html"><img
-				class="h-16"
-				src="../MEDIA/LOGO3.png"
-				alt="Social Network logo"
+			<a href="./index.html"
+				><img
+					class="h-16"
+					src="../MEDIA/LOGO3.png"
+					alt="Social Network logo"
 			/></a>
-			<div class="w-fit gap-8 flex flex-row justify-between">
+			<nav class="w-fit gap-8 flex flex-row justify-between items-center">
 				<a href="../AUTH/login.html"
 					><button
-						class="py-1.5 border-2 border-solid border-sky-700 rounded-lg px-3.5 hover:border-slate-50"
+						class="flex gap-2.5 justify-center items-center min-w-fit w-32 py-2.5 border-2 border-solid border-sky-700 rounded-lg px-3.5 hover:border-slate-50"
 					>
-						Log in
+						<i class="fa-solid fa-user"></i>Log in
 					</button></a
 				>
 				<a href="../AUTH/register.html"
 					><button
-						class="py-1.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
+						class="flex gap-2.5 justify-center items-center min-w-fit w-32 py-2.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
 					>
-						Register
+						<i class="fa-solid fa-arrow-right-from-bracket"></i
+						>Register
 					</button></a
 				>
-			</div>
+			</nav>
 		</header>
-		<div
-			class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32 h-dvh"
+		<main
+			class="flex flex-row items-end relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32 h-dvh"
 		>
 			<img
 				src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&crop=focalpoint&fp-y=.8&w=2830&h=1500&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply"
@@ -96,9 +98,9 @@
 					"
 				></div>
 			</div>
-			<div class="mx-auto max-w-7xl px-6 lg:px-8">
+			<div class="mx-24 max-w-7xl px-6 lg:px-8">
 				<div
-					class="mx-auto w-1/2 lg:mx-0 h-80 flex flex-col justify-between p-3.5"
+					class="pb-8 mx-auto w-80% lg:mx-0 h-80 flex flex-col justify-between p-3.5"
 				>
 					<h2
 						class="text-4xl font-bold tracking-tight text-white sm:text-6xl"
@@ -112,19 +114,20 @@
 
 					<a href="../AUTH/register.html"
 						><button
-							class="text-slate-50 w-fit px-2.5 py-1.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
+							class="text-white flex gap-2.5 justify-center items-center min-w-fit w-32 py-2.5 bg-sky-700 rounded-lg px-3.5 transition ease-in-out hover:bg-slate-50 hover:text-slate-950"
 						>
-							Register
+							<i class="fa-solid fa-arrow-right-from-bracket"></i
+							>Register
 						</button></a
 					>
 				</div>
 			</div>
-		</div>
+		</main>
 		<footer
 			class="flex flex-row justify-evenly px-3.5 items-center h-32 bg-slate-950 text-white"
 		>
 			<h2 class="text-lg leading-8 text-gray-300">
-				Copyright - Simplon 2024
+				Copyright - Simplon® 2024
 			</h2>
 			<h2 class="text-lg leading-8 text-gray-300">About</h2>
 			<h2 class="text-lg leading-8 text-gray-300">Contact</h2>
