continued user html, added favicon

--- a/FRONT/AUTH/login.html
+++ b/FRONT/AUTH/login.html
@@ -5,6 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Social Network</title>
 		<link rel="stylesheet" href="../CSS/main.css" />
+		<link
+			rel="shortcut icon"
+			href="../MEDIA/favicon-32x32.png"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<header
