--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -36,7 +36,7 @@
 			</nav>
 		</header>
 		<main
-			class="flex flex-row items-end relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32 h-dvh"
+			class="flex flex-row items-center relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32 h-dvh"
 		>
 			<img
 				src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&crop=focalpoint&fp-y=.8&w=2830&h=1500&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply"
