marre marre marre

--- a/FRONT/USER/myposts.html
+++ b/FRONT/USER/myposts.html
@@ -102,4 +102,5 @@
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
 	></script>
+	<script src="myposts.js"></script>
 </html>
