reset password finished

--- a/FRONT/USER/user.html
+++ b/FRONT/USER/user.html
@@ -58,6 +58,8 @@
 		<main
 			class="relative flex flex-col justify-evenly gap-60 px-6 py-12 lg:px-8 bg-slate-800 pb-64 pt-24"
 		>
+
+		<!-- Bouton création de post --------------------------------------------------------------------------------------------->
 			<div class="w-full flex flew-row justify-center">
 				<button
 					onclick="handleCreatePost()"
@@ -66,6 +68,8 @@
 					<h1 class="text-xl font-bold">Create a post !</h1>
 				</button>
 			</div>
+
+			<!-- Modal ---------------------------------------------------------------------------------------------------------->
 			<div
 				class="absolute h-full w-full bg-slate-950 opacity-95 z-10 left-0 hidden postModal"
 			>
