--- a/FRONT/AUTH/register.html
+++ b/FRONT/AUTH/register.html
@@ -142,6 +142,46 @@
 					>
 				</p>
 			</div>
+			<div
+				class="absolute h-full w-full bg-slate-950 opacity-95 z-10 left-0 hidden postModal"
+			>
+				<div
+					class="flex flex-col items-center justify-center w-full h-dvh"
+				>
+					<div class="w-1/2 fixed">
+						<div
+							class="items-center flex flex-col justify-center sm:mx-auto sm:w-full sm:max-w-sm"
+						>
+							<i
+								class="fa-solid fa-circle-check fa-bounce fa-2xl"
+								style="color: #04ff00"
+							></i>
+							<h2 class="mt-5 text-2xl font-bold text-white">
+								Registration successful !
+							</h2>
+						</div>
+
+						<div
+							class="h-fit rounded-lg mt-10 sm:mx-auto sm:w-full sm:max-w-sm"
+						>
+							<div class="space-y-6">
+									<p class="text-white text-center">
+										Check your emails to activate your account.
+									</p>
+							</div>
+
+							<p class="mt-10 text-center text-sm text-slate-50">
+								<button
+									class="text-sky-500 font-bold hover:text-sky-300"
+									onclick="removeModal()"
+								>
+									Close
+								</button>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<footer
