je commit car ya un orage

--- a/FRONT/USER/user.html
+++ b/FRONT/USER/user.html
@@ -56,11 +56,11 @@
 		</header>
 
 		<main
-			class="relative flex flex-col justify-evenly gap-60 px-6 py-12 lg:px-8 bg-slate-800 pb-64 pt-24"
+			class="relative flex flex-col justify-evenly gap-40 px-6 py-12 lg:px-8 bg-slate-800 pb-64 pt-24"
 		>
 
 		<!-- Bouton création de post --------------------------------------------------------------------------------------------->
-			<div class="w-full flex flew-row justify-center">
+			<div class="w-full flex flew-row justify-center mb-20">
 				<button
 					onclick="handleCreatePost()"
 					class="bg-sky-500 p-2.5 rounded-lg text-white hover:bg-sky-700 h-24 w-56 createPost"
